# laas

./: .gitignore  README.md
Firmware/pi/: camera.py
Firmware/pico/: main.py
comp-vision/: main.py  pyproject.toml
mock_virtual_lab/: main.py  pyproject.toml
mock_virtual_lab/templates/: index.html
optimisation_backend/: api_calls.py  background_tasks.py  bayes_opt.py  main.py  model.py  pyproject.toml  utils.py  well_analyzer.py
web-app/: package-lock.json  package.json
web-app/src/: App.tsx
web-app/src/components/: ActionLog.tsx  CreateExperimentModal.tsx  EquipmentPanel.tsx  ExperimentControls.tsx  ExperimentFlow.tsx  ExperimentStepper.tsx  ObjectivePanel.tsx  OptimizerPanel.tsx  PlanExperiment.tsx  RunExperiment.tsx  WellPlate.tsx
web-app/src/components/nodes/: AddDyesNode.tsx  GetColorNode.tsx
web-app/src/components/ui/: Button.tsx  Dialog.tsx  Switch.tsx
web-app/src/hooks/: useExperimentExecution.ts
web-app/src/lib/: api.ts  costs.ts  experimentApi.ts  icons.ts  utils.ts
web-app/src/store/: equipmentStore.ts  experimentStore.ts
web-app/src/stores/: equipmentStore.ts  experimentStore.ts
web-app/src/types/: equipment.ts  experiment.ts
workflow-builder/: package-lock.json  package.json
workflow-builder/src/app/: page.tsx
workflow-builder/src/components/: WorkflowBuilder.tsx
