[project]
name = "optimisation-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "numpy>=2.1.3",
    "openai>=1.57.0",
    "opencv-python>=4.10.0.84",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-optimize>=0.10.2",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
